# MoltWatch

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
dashboard/: .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AgentDetail.tsx  CaseWorkspace.tsx  GraphCanvas.tsx  Layout.tsx  MetricsPanel.tsx  PathExplorer.tsx  SearchBar.tsx  ThreatFeed.tsx
dashboard/src/hooks/: useAnalysis.ts  useGraphData.ts
dashboard/src/lib/: api.ts  colors.ts
dashboard/src/types/: index.ts
scripts/: run_analysis.py  seed_neo4j.py
src/moltwatch/: __init__.py  config.py
src/moltwatch/analysis/: anomaly.py  centrality.py  community.py  influence.py  reports.py  temporal.py  trust.py
src/moltwatch/api/: main.py  schemas.py
src/moltwatch/api/routes/: agents.py  analysis.py  graph.py  search.py  threats.py
src/moltwatch/collector/: dataset_loader.py  db.py  models.py  scheduler.py  scraper.py
src/moltwatch/graph/: connection.py  ingest.py  queries.py  schema.py
src/moltwatch/mcp_server/: prompts.py  server.py  tools.py
tests/: test_analysis.py  test_api.py  test_collector.py  test_smoke.py
