[project]
name = "moltwatch"
version = "0.1.0"
description = "Agent Network Threat Intelligence — Social Network Analysis for AI agent social networks"
readme = "README.md"
authors = [
    { name = "Akash", email = "iamakash-06@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "neo4j>=5.20.0",
    "graphdatascience>=1.8.0",
    "mcp>=1.7.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "apscheduler>=3.10.4",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
moltwatch-mcp = "moltwatch.mcp_server.server:main"
moltwatch-api = "moltwatch.api.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moltwatch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
